Fri Dec 19 13:09:11 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac,diritor.cc: Avoid doing link tests with libmagic in
	  configure as they fail on mingw due to not automatically picking up
	  libraries which libmagic itself depends on.

Fri Dec 19 03:21:13 GMT 2014  Olly Betts <olly@survex.com>

	* docs/cgiparams.rst: Improve wording of docs for SORT parameter.

Tue Dec 16 04:06:06 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Fix typo: 'libmagic-devl' -> 'libmagic-devel'

Tue Dec 16 03:53:25 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Define MINGW_HAS_SECURE_API under mingw to get
	  _putenv_s() declared in stdlib.h.

Thu Dec 11 11:33:41 GMT 2014  Olly Betts <olly@survex.com>

	* Makefile.am: Add timegm.cc to scriptindex_SOURCES to fix build on
	  platforms which don't provide timegm().

Wed Dec 03 04:17:18 GMT 2014  Olly Betts <olly@survex.com>

	* templates/xml: Update handling of DATE1, DATE2 and DAYSMINUS which
	  were renamed in 0.6.x and the compatibility aliases removed in
	  1.0.0. 

Wed Dec 03 04:15:51 GMT 2014  Olly Betts <olly@survex.com>

	* docs/omegascript.rst: Update documentation references to DATE1,
	  DATE2, and DAYSMINUS which were renamed in 0.6.x and the
	  compatibility aliases removed in 1.0.0. 

Wed Dec 03 02:40:50 GMT 2014  Olly Betts <olly@survex.com>

	* omindex.cc: Make sample_size a global variable rather than passing
	  it around everywhere.

Wed Dec 03 02:29:37 GMT 2014  Olly Betts <olly@survex.com>

	* omindex.cc: Remove unused '#include <fstream>'.

Wed Dec 03 02:18:51 GMT 2014  Olly Betts <olly@survex.com>

	* diritor.h: Fix get_mtime() to return time_t not off_t.  In practice,
	  this probably wouldn't have caused issues until at least 2038.

Fri Nov 28 17:12:37 GMT 2014  James Aylett <james@tartarus.org>

	* Makefile.am: link omindex-list with our (GNU) getopt.

Fri Nov 28 11:38:56 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Move AC_CANONICAL_HOST before first use of $host_os.